# clifun

./: LICENSE  README.md  clifun.py  conftest.py  datacli.py  default.nix  example-advanced.py  example.py  pyproject.toml  shell.nix
examples/: advanced.py  basic.py  boolean.py  foo.json  function.py  nested.py
src/: clattr.py  clifun.py  inputs.py  interpret_string.py  tools.py
src/clattr/: interpret_string.py
src/clifun/: __init__.py  api.py  inputs.py  interpret_string.py  tools.py
test/: test_clattr.py  test_clifun.py
