[tool.poetry]
name = "clifun"
version = "0.0.2"
description = "Construct a comand line interface based on a function or class"
authors = ["Tom Dimiduk <tom@dimiduk.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.6.2,<4.0"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
black = "^21.4b2"
isort = "^5.8.0"
mypy = "^0.930"
pytest = "^6.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
