[project]
name = "clifun"
version = "0.0.2"
description = "Construct a comand line interface based on a function or class"
authors = [{ name = "Tom Dimiduk", email = "tom@dimiduk.net"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"

[tool.pytest.ini_options]
addopts = "-p no:doctest"


[project.optional-dependencies]
dev = [
    "mypy>=1.17.1",
    "ruff>=0.12.0",
    "pytest>=6.2.3",
    "pyright>=1.1.405",
    "sybil>=9.0.0",
]

[build-system]
requires = ["uv_build >= 0.7.19, <0.9.0"]
build-backend = "uv_build"
